Fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -6,41 +6,45 @@
     .white-key {
         @apply w-5 h-20 text-center bg-white border border-gray-600 border-solid;
         @apply hover:bg-gray-400 hover:cursor-pointer;  
-        @apply lg:w-10 lg:h-52 lg:border-2;  
+        @apply md:w-7 md:h-32 lg:w-10 lg:h-52 lg:border-2;  
     }
 
     .white-key.piano-key-selected {
         @apply w-5 h-20 text-center bg-blue-400 border border-gray-600 border-solid;
         @apply hover:bg-gray-400 hover:cursor-pointer;  
-        @apply lg:w-10 lg:h-52 lg:border-2;  
+        @apply md:w-7 md:h-32 lg:w-10 lg:h-52 lg:border-2;  
     }
 
     .white-key.piano-key-in-scale {
         @apply w-5 h-20 text-center bg-blue-400 border border-gray-600 border-solid;
         @apply hover:bg-gray-400 hover:cursor-pointer;  
-        @apply lg:w-10 lg:h-52 lg:border-2;  
+        @apply md:w-7 md:h-32 lg:w-10 lg:h-52 lg:border-2;  
     }
     
     .black-key {
         @apply relative w-3 h-12 -ml-1.5 -mr-1.5 text-center bg-gray-900 border border-gray-600 border-solid border-x border-y;
         @apply hover:bg-gray-400 hover:cursor-pointer;
-        @apply lg:w-6 lg:h-32 lg:-ml-3 lg:-mr-3 lg:border-2;
+        @apply md:w-3 md:h-20 lg:w-6 lg:h-32 lg:-ml-3 lg:-mr-3 lg:border-2;
     }
 
     .black-key.piano-key-selected {
         @apply relative w-3 h-12 -ml-1.5 -mr-1.5 text-center bg-blue-500 border border-gray-600 border-solid border-x border-y;
         @apply hover:bg-gray-400 hover:cursor-pointer;
-        @apply lg:w-6 lg:h-32 lg:-ml-3 lg:-mr-3 lg:border-2;
+        @apply md:w-3 md:h-20 lg:w-6 lg:h-32 lg:-ml-3 lg:-mr-3 lg:border-2;
     }
     .black-key.piano-key-in-scale {
         @apply relative w-3 h-12 -ml-1.5 -mr-1.5 text-center bg-blue-500 border border-gray-600 border-solid border-x border-y;
         @apply hover:bg-gray-400 hover:cursor-pointer;
-        @apply lg:w-6 lg:h-32 lg:-ml-3 lg:-mr-3 lg:border-2;
+        @apply md:w-3 md:h-20 lg:w-6 lg:h-32 lg:-ml-3 lg:-mr-3 lg:border-2;
     }
 
     .select-input {
-        @apply block w-full py-4 pl-3 font-normal leading-5 transition border-2 border-blue-300 rounded-md text-sm-2 max-w-80;
-        @apply hover:border-blue-500;
+        @apply block w-full py-4 pl-3 font-semibold leading-5 transition border-2 rounded-md border-slate-500 dark:border-slate-800 text-sm-2 max-w-80;
+        @apply hover:border-slate-800 dark:hover:border-slate-950;
         @apply lg:hover:cursor-pointer;
+    }
+
+    .label-name {
+        @apply block mb-2 font-bold text-left uppercase text-gray-10 dark:text-slate-100;
     }
 }
